# agrega

./: .rustfmt.toml  Cargo.toml  LICENSE-BSD  LICENSE-MIT  README.md
DOCS/: CHANGELOG.md  LICENSE
examples/: triangle.rs
src/: Gallery.md  Lib.md  alphamask.rs  base.rs  cell.rs  clip.rs  color.rs  interp.rs  lib.rs  math.rs  outline.rs  outline_aa.rs  paths.rs  raster.rs  render.rs  stroke.rs  text.rs  traits.rs  transform.rs  util.rs  workflow.rs
src/interp/: dist_defs.rs  dist_impls.rs  distance.rs  line.rs  line_defs.rs  line_impls.rs  mod.rs  tests.rs
src/outline/: aa_rast.rs  aa_rend.rs  mod.rs  rast.rs  rend.rs
src/paths/: mod.rs  shapes.rs  stroke.rs  transform.rs
src/pixfmt/: alpha_blend.rs  buffer.rs  file.rs  mod.rs  pixel.rs  pixfmt.rs  tests.rs
src/scanline/: gradient.rs  mod.rs  rast.rs  rend.rs  scan.rs
src/text/: gsv.rs  label.rs  mod.rs
tests/std/: _common.rs  _utils.rs  aa_test.rs  component_rendering_000.rs  component_rendering_128.rs  component_rendering_255.rs  lion.rs  lion_cw.rs  lion_cw_aa.rs  lion_cw_aa_srgba.rs  lion_outline.rs  lion_outline_width1.rs  lion_png.rs  mod.rs  outline.rs  outline_aa.rs  rasterizers.rs  rasterizers2.rs  rasterizers2_pre.rs  rasterizers_gamma.rs  rounded_rect.rs  t00_example.rs  t01_rendering_buffer.rs  t02_pixel_formats.rs  t03_solar_spectrum.rs  t04_solar_spectrum_alpha.rs  t05_solar_spectrum_alpha.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  t16.rs  t21_line_join.rs  t22_inner_join.rs  t23_font.rs
utils/: check.sh
