[package]
name = "agrega"
description = "High-quality 2D graphics engine based on Anti-grain Geometry"
version = "0.1.1"
edition = "2021"
rust-version = "1.82.0" # sync with README.md
authors = [
	"Maxim Shemanarev (McSeem)",
	"Brian Savage <savage13@gmail.com>",
	"jarris2268",
	"José Luis Cruz <joseluis@andamira.net>",
]
repository = "https://github.com/andamira/agrega"
license = "BSD-2-Clause"
include = [
	"/src/**/*.rs", "/src/**/*.md",
	"/Cargo.toml",
	"/LICENSE*",
	"/README.md",
]
categories = ["rendering::graphics-api", "no-std"]
keywords = ["2d", "graphics"]
publish = true

[features]
# for now, almost everything depends on alloc
default = ["alloc"]

std = ["alloc", "devela/std"]
alloc = ["devela/alloc"]
no_std = ["devela/libm"]
safe = []
unsafe = []
nightly = []

text = ["std", "freetype-rs"]
docsrs = ["nightly", "std", "freetype-rs"]


[dependencies]
devela = { version = "0.21.2", features = ["_float_f32", "_float_f64"] }

freetype-rs = { version = "0.37", optional = true }
# font-loader = "0.11.0"

[dependencies.image]
version = "0.25.4"
# optional = true # TODO
default-features = false
features = ["png", "gif", "pnm", "bmp", "jpeg"]

[package.metadata.docs.rs]
no-default-features = true
features = ["docsrs"]

[[example]]
name = "triangle"
required-features = ["std"]
