[package]
name = "agrega"
description = "High-quality 2D graphics engine based on Anti-grain Geometry"
version = "0.1.1"
edition = "2021"
rust-version = "1.82.0" # sync with README.md
authors = [
	"Maxim Shemanarev (McSeem)",
	"Brian Savage <savage13@gmail.com>",
	"jarris2268",
	"José Luis Cruz <joseluis@andamira.net>",
]
repository = "https://github.com/andamira/agrega"
license = "BSD-2-Clause"
include = [
	"/src/**/*.rs", "/src/**/*.md",
	"/Cargo.toml",
	"/DOCS/*",
]
categories = ["rendering::graphics-api", "no-std"]
keywords = ["2d", "graphics"]
publish = true

[features]
# ==============================================================================

# environment
# ------------------------------
std = ["alloc", "devela/std"]
alloc = ["devela/alloc"]
no_std = ["devela/libm"]

# safety
# ------------------------------
safe = []
unsafe = []

# nightly
# ------------------------------
nightly = [
	"nightly_doc",
] # enables all the following features:
	# WAIT: [doc_cfg](https://github.com/rust-lang/rust/issues/43781)
	# WAIT: [doc_notable_trait](https://github.com/rust-lang/rust/issues/45040)
	nightly_doc = ["devela/nightly_doc"]

# capabilities
# ------------------------------
default = ["alloc"] # for now, almost everything depends on alloc
text = ["std", "freetype"]

# The most complete versions of the documentation:
_docsrs = ["nightly", "std", "freetype"]

freetype = ["dep:freetype-rs", "alloc"]

[dependencies]
# ==============================================================================
devela = { version = "0.21.2", features = ["_float_f32", "_float_f64"] }

freetype-rs = { version = "0.37", optional = true }

[dependencies.image]
version = "0.25.4"
default-features = false
features = ["png", "pnm", "bmp", "jpeg"]


[package.metadata.docs.rs]
# ==============================================================================
no-default-features = true
features = ["_docsrs"]


# examples
# ==============================================================================
[[example]]
name = "triangle"
required-features = ["std"]
